testing CI/CD update

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Containerization & Orchestration</h4>
+                <h4 class="h4 service-item-title">Containerization</h4>
 
                 <p class="service-item-text">
                   Create and deploy applications in Docker containers; familiar with container orchestration basics using Kubernetes.
